update more setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
-name = django-cryptography
+name = django-cryptography-5
 version = attr: django_cryptography.__version__
-url = https://github.com/georgemarshall/django-cryptography
-author = George Marshall
-author_email = george@georgemarshall.name
+url = https://github.com/saaspegasus/django-cryptography
+author = George Marshall, Cory Zue
+author_email = george@georgemarshall.name, cory@coryzue.com
 description = Easily encrypt data in Django
 long_description = file: README.rst
 long_description_content_type = text/x-rst
@@ -36,7 +36,7 @@ classifiers =
     Topic :: Security :: Cryptography
 project_urls =
     Bug Reports = https://github.com/georgemarshall/django-cryptography/issues
-    Source = https://github.com/georgemarshall/django-cryptography
+    Source = https://github.com/saaspegasus/django-cryptography
     Documentation = https://django-cryptography.readthedocs.io
 
 [options]
