--- a/setup.cfg
+++ b/setup.cfg
@@ -40,7 +40,7 @@ project_urls =
     Documentation = https://django-cryptography.readthedocs.io
 
 [options]
-packages = django_cryptography
+packages = find:
 python_requires = >=3.7
 include_package_data = True
 install_requires =
@@ -63,3 +63,6 @@ universal = 1
 [flake8]
 max-line-length = 88
 extend-ignore = E203
+
+[options.packages.find]
+include = django_cryptography*
